clusters/vollminlab-cluster/apps/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: radarr
    meta.helm.sh/release-namespace: mediastack
  creationTimestamp: "2025-02-04T04:04:19Z"
  generation: 1
  labels:
    app: radarr-23.18.0
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr
    app.kubernetes.io/version: 5.18.4.9674
    helm-revision: "1"
    helm.sh/chart: radarr-23.18.0
    release: radarr
  name: radarr
  namespace: mediastack
  resourceVersion: "4436469"
  uid: 215efa88-15f6-472a-9622-09d91b6c9a8a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/cnpg: 2291fc448ae81adfd860632d73e38ffc039fc25959ede77cf692f754199383ee
        checksum/configmaps: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/mariadb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/persistence: f9f3779253d9fa7924d1304b914f66268ed5472f534c1ca10d5d959e62102a9c
        checksum/redis: 013343a028cbb3f7e08f4ba7522702dd98e52632c688641074b0b1db3df29894
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/services: 5e2aaf937c45916fa1f8cbcbb8ca239a3fdf9fbe0f890df26f9cec361b6fa01f
        checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
      creationTimestamp: null
      labels:
        app: radarr-23.18.0
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: radarr
        app.kubernetes.io/version: 5.18.4.9674
        helm-revision: "1"
        helm.sh/chart: radarr-23.18.0
        pod.lifecycle: permanent
        pod.name: main
        release: radarr
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        - radarr
        env:
        - name: TZ
          value: UTC
        - name: UMASK
          value: "0022"
        - name: UMASK_SET
          value: "0022"
        - name: NVIDIA_VISIBLE_DEVICES
          value: void
        - name: S6_READ_ONLY_ROOT
          value: "1"
        - name: CONFIG
          value: /config/config.xml
        - name: INTERFACE
          value: 0.0.0.0
        - name: PORT
          value: "7879"
        - name: URL
          value: http://radarr:7878
        image: ghcr.io/onedr0p/exportarr:v2.0.1@sha256:727e7bc8f2f0934a2117978c59f4476b954018b849a010ea6cfb380bd6539644
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 7879
            scheme: HTTP
          initialDelaySeconds: 12
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        name: radarr-exportarr
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /healthz
            port: 7879
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 12
          successThreshold: 2
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "4"
            memory: 8Gi
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsGroup: 568
          runAsNonRoot: true
          runAsUser: 568
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /healthz
            port: 7879
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
        - mountPath: /dev/shm
          name: devshm
        - mountPath: /shared
          name: shared
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/logs
          name: varlogs
        - mountPath: /var/run
          name: varrun
      - env:
        - name: TZ
          value: UTC
        - name: UMASK
          value: "0022"
        - name: UMASK_SET
          value: "0022"
        - name: NVIDIA_VISIBLE_DEVICES
          value: void
        - name: S6_READ_ONLY_ROOT
          value: "1"
        - name: RADARR__AUTH__METHOD
        - name: RADARR__AUTH__REQUIRED
          value: DisabledForLocalAddresses
        - name: RADARR__SERVER__PORT
          value: "7878"
        image: ghcr.io/onedr0p/radarr:5.18.4.9674@sha256:f63ab1d9875d81f1b6d7cd69427749451d2fab981e39ffb8d9071c2e21041170
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /ping
            port: 7878
            scheme: HTTP
          initialDelaySeconds: 12
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        name: radarr
        ports:
        - containerPort: 7878
          name: main
          protocol: TCP
        - containerPort: 7879
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /ping
            port: 7878
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 12
          successThreshold: 2
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "4"
            memory: 8Gi
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsGroup: 568
          runAsNonRoot: true
          runAsUser: 568
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /ping
            port: 7878
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /downloads/completed-downloads
          name: completed-downloads
        - mountPath: /config
          name: config
        - mountPath: /dev/shm
          name: devshm
        - mountPath: /downloads/incomplete-downloads
          name: incomplete-downloads
        - mountPath: /downloads/movies
          name: movies
        - mountPath: /shared
          name: shared
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/logs
          name: varlogs
        - mountPath: /var/run
          name: varrun
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
        - 568
      serviceAccount: default
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/instance: radarr
            app.kubernetes.io/name: radarr
            pod.name: main
        maxSkew: 1
        nodeAffinityPolicy: Honor
        nodeTaintsPolicy: Honor
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - name: completed-downloads
        persistentVolumeClaim:
          claimName: pvc-completed-downloads
      - name: config
        persistentVolumeClaim:
          claimName: pvc-radarr-config
      - emptyDir:
          medium: Memory
          sizeLimit: 8Gi
        name: devshm
      - name: incomplete-downloads
        persistentVolumeClaim:
          claimName: pvc-incomplete-downloads
      - name: movies
        persistentVolumeClaim:
          claimName: pvc-movies
      - emptyDir: {}
        name: shared
      - emptyDir:
          medium: Memory
          sizeLimit: 8Gi
        name: tmp
      - emptyDir:
          medium: Memory
          sizeLimit: 8Gi
        name: varlogs
      - emptyDir:
          medium: Memory
          sizeLimit: 8Gi
        name: varrun
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-02-04T04:04:19Z"
    lastUpdateTime: "2025-02-04T04:04:36Z"
    message: ReplicaSet "radarr-59bd65989" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-02-08T06:34:47Z"
    lastUpdateTime: "2025-02-08T06:34:47Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
