clusters/vollminlab-cluster/apps/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"radarr-ingress","namespace":"mediastack"},"spec":{"ingressClassName":"nginx","rules":[{"host":"radarr.vollminlab.com","http":{"paths":[{"backend":{"service":{"name":"radarr","port":{"number":7878}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["radarr.vollminlab.com"],"secretName":"wildcard-tls"} [...]
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2025-01-21T01:01:26Z"
  generation: 2
  name: radarr-ingress
  namespace: mediastack
  resourceVersion: "185293"
  uid: 99bf2117-6e62-42ba-9d30-d3c0b7f241ea
spec:
  ingressClassName: nginx
  rules:
  - host: radarr.vollminlab.com
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 7878
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radarr.vollminlab.com
    secretName: wildcard-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.152.244
